--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -1,5 +1,5 @@
 // https://elad.medium.com/normalize-css-or-css-reset-9d75175c5d1e
 
-@import "resets/normalize.scss";
-@import "resets/reset.local.scss";
-@import "resets/typography.scss";
+@import "./resets/normalize.scss";
+@import "./resets/reset.local.scss";
+@import "./resets/typography.scss";
