--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,97 @@
-@import "./_reset.scss";
+/* https://elad.medium.com/normalize-css-or-css-reset-9d75175c5d1e */
 
-.main-canvas {
-    max-width: 100vw;
-    overflow-x: hidden;
+@import "./resets/normalize.css";
+@import "./resets/reset.local.css";
+@import url("https://fonts.cdnfonts.com/css/gotham");
+
+/* typography by Elad Shechter */
+
+html {
+    font-size: 1px; /*for using REM units*/
+}
+body {
+    font-family: "Gotham", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        "Helvetica Neue", Arial, sans-serif;
+    font-size: 14rem;
+    font-weight: 400;
+    line-height: 1.3;
+
+    color: #fff;
+    background-color: #333;
 }
 
+/* variables */
+
+body {
+    --header-height: 56px;
+}
+
+/* utilities */
+
+/* overall canvas */
+
+.main-canvas {
+    /* max-width: 100vw;
+    overflow-x: hidden; */
+}
+
+/* main menu and header */
+
 .header-wrapper {
-    
+    width: 100vw;
+}
+
+.global-menu {
+    height: var(--header-height);
+    background-color: rgba(255, 255, 255, 0.161);
+}
+
+.global-menu a {
+    color: #fff;
+    font-weight: 500;
+}
+
+.global-menu .backdrop-plate {
+    background-color: rgba(0, 0, 0, 0.05);
+    transition: opacity 0.5s ease, visibility 0s 0.5s;
+}
+
+.global-menu h1 {
+    text-align: center;
+    float: left;
+    height: var(--header-height);
+}
+
+.global-menu h1 a {
+    padding: 0 16px;
+}
+
+.global-menu h1 a svg {
+    width: 120px;
+    height: 24px;
+}
+
+.global-menu nav {
+    float: right;
+    padding-right: 32px;
+    font-weight: 200;
+    overflow: auto;
+}
+
+.global-menu ol {
+    list-style: none;
+    float: left;
+    height: var(--header-height);
+}
+.global-menu ol li {
+    display: inline-block;
+}
+
+.global-menu ol li a {
+    padding: 4px 12px;
+}
+
+.global-menu .nav-center {
+}
+.global-menu .nav-end {
 }
