--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 @import "./resets/normalize.css";
 @import "./resets/reset.local.css";
-@import url("https://fonts.cdnfonts.com/css/gotham");
+@import url("/Gotham-Font/gotham.css");
 
 /* typography by Elad Shechter */
 
@@ -10,11 +10,14 @@ html {
     font-size: 1px; /*for using REM units*/
 }
 body {
-    font-family: "Gotham", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-        "Helvetica Neue", Arial, sans-serif;
+    font-family: "Gotham SSm", -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, "Helvetica Neue", Arial, sans-serif;
     font-size: 14rem;
     font-weight: 400;
     line-height: 1.3;
+
+    min-width: 1200px;
+    overflow-x: hidden;
 
     color: #fff;
     background-color: #333;
@@ -31,67 +34,133 @@ body {
 /* overall canvas */
 
 .main-canvas {
-    /* max-width: 100vw;
-    overflow-x: hidden; */
+    max-width: 100vw;
+    /* overflow-x: hidden;  */
 }
 
 /* main menu and header */
 
 .header-wrapper {
-    width: 100vw;
+    position: absolute;
+    min-width: 100vw;
 }
 
 .global-menu {
+    position: relative;
     height: var(--header-height);
-    background-color: rgba(255, 255, 255, 0.161);
 }
 
 .global-menu a {
     color: #fff;
-    font-weight: 500;
-}
-
-.global-menu .backdrop-plate {
-    background-color: rgba(0, 0, 0, 0.05);
-    transition: opacity 0.5s ease, visibility 0s 0.5s;
+    font-weight: 400;
+    /* line-height: 2; */
 }
 
 .global-menu h1 {
-    text-align: center;
-    float: left;
-    height: var(--header-height);
+    position: absolute;
+    top: 50%;
+    left: 32px;
+    transform: translate(0, -50%);
 }
 
 .global-menu h1 a {
+    display: block;
+    min-height: 32px;
     padding: 0 16px;
+    position: relative;
 }
 
 .global-menu h1 a svg {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(0, -50%);
     width: 120px;
     height: 24px;
 }
 
-.global-menu nav {
-    float: right;
-    padding-right: 32px;
-    font-weight: 200;
-    overflow: auto;
-}
-
 .global-menu ol {
     list-style: none;
-    float: left;
-    height: var(--header-height);
+    /* height: var(--header-height); */
 }
 .global-menu ol li {
+    float: left;
+    padding: 0 8px;
+    height: 32px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.5s ease;
+}
+
+.global-menu ol li::before {
+    /* vertical alignment */
+    content: "";
+    min-height: 100%;
     display: inline-block;
+    vertical-align: middle;
+}
+
+.global-menu ol li:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+    transition: background-color 0.5s ease;
 }
 
 .global-menu ol li a {
-    padding: 4px 12px;
+    min-height: 32px;
+    padding: 0px 8px;
+    /* vertical alignment */
+    vertical-align: middle;
 }
 
 .global-menu .nav-center {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 .global-menu .nav-end {
+    position: absolute;
+    top: 50%;
+    right: 32px;
+    transform: translate(0, -50%);
+}
+
+/* showcases utilities */
+.showcase {
+    position: relative;
+    height: 100vh;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+}
+
+/* showcase tesla3 */
+#model3 {
+}
+
+#model3 .bg-fs-img {
+    position: relative;
+    z-index: -1;
+    height: 100vh;
+    width: 100vw;
+}
+#model3 .bg-fs-img img {
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+}
+#model3 .hero-content {
+    position: absolute;
+    z-index: auto;
+    top: 16vh;
+    text-align: center;
+    margin: 0 auto;
+    width: 100vw;
+}
+
+#model3 .hero-content h1 {
+    font-size: 40px;
+    line-height: 48px;
+    font-weight: 500;
+    letter-spacing: -0.6px;
 }
