--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* https://elad.medium.com/normalize-css-or-css-reset-9d75175c5d1e */
 
-@import "resets/normalize.css";
-@import "resets/reset.local.css";
+@import "./resets/normalize.css";
+@import "./resets/reset.local.css";
 @import url("../Gotham-Font/gotham.css");
 
 /* typography by Elad Shechter */
