--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body {
 body {
     --header-height: 56px;
     --tds-bezier: cubic-bezier(0.5, 0, 0, 0.75);
+    --fill-white: #fff;
 }
 
 /* utilities */
@@ -98,7 +99,7 @@ body {
 }
 
 .global-menu ol li:hover {
-    background-color: rgba(0, 0, 0, 0.05);
+    background-color: #2b2e35;
     transition: background-color 0.5s ease;
 }
 
@@ -130,6 +131,34 @@ body {
     scroll-behavior: smooth;
 }
 
+.chevron {
+    width: 24px;
+    height: 24px;
+    animation-iteration-count: infinite;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    animation-name: tds-keyframe--bounce;
+}
+
+@keyframes tds-keyframe--bounce {
+    0%,
+    20%,
+    50%,
+    80%,
+    to {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+    40% {
+        -webkit-transform: translateY(5px);
+        transform: translateY(5px);
+    }
+    60% {
+        -webkit-transform: translateY(3px);
+        transform: translateY(3px);
+    }
+}
+
 /* showcase tesla3 */
 
 #model3 .bg-fs-img {
@@ -144,13 +173,22 @@ body {
     height: 100vh;
     object-fit: cover;
 }
-#model3 .hero-content {
+
+#model3 .hero-content-wrapper {
     position: absolute;
     z-index: auto;
     top: 16vh;
+    height: calc(100vh - 16vh);
+}
+
+/* showcase text content */
+
+#model3 .hero-content {
+    position: relative;
     text-align: center;
     margin: 0 auto;
     width: 100vw;
+    height: 100%;
 }
 
 #model3 .hero-content h1 {
@@ -164,10 +202,55 @@ body {
     padding: 6px 24px 14px;
 }
 #model3 .hero-content p a {
+    color: #eee;
     box-shadow: 0 1px 0 0 currentColor;
     transition: box-shadow 0.33s var(--tds-bezier), color 0.33s ease;
 }
 #model3 .hero-content p a:hover {
     box-shadow: 0 2px 0 0 currentColor;
     transition: 0.33s var(--tds-bezier), color 0.33s ease;
+}
+
+/* showcase lower badges part */
+
+#model3 .hero-content-end {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    padding-bottom: 8px;
+}
+
+#model3 .disclamer {
+    min-height: 18px;
+    margin-top: 32px;
+}
+
+/* height 2 * 28 px */
+/* 160 / 24px gap / 160 / 24px gap / 160 / 24px gap /  212 */
+
+#model3 .hero-content-end .badges .speedometer {
+    width: 40px;
+    height: 20px;
+    position: relative;
+}
+
+#model3 .hero-content-end .badges .speedometer .inner-circle {
+    height: 15px;
+    width: 30px;
+    position: absolute;
+    bottom: 0;
+    inset-inline-start: 5px;
+    opacity: 0.2;
+}
+#model3 .hero-content-end .badges .speedometer .needle {
+    width: 4px;
+    position: absolute;
+    /* left: calc(50% - 2px); */
+    bottom: 0;
+    z-index: 2;
+    inset-inline-start: calc(50% - 2px);
+    transform-origin: center bottom;
+    transform: translateZ(0) rotate(90deg);
+    transition: transform 1.733s cubic-bezier(0.77, 0, 0.175, 1) 0.2s;
 }
