--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
     overflow-x: hidden;
 
     color: #fff;
-    background-color: #333;
+    background-color: #fff;
 }
 
 /* variables */
@@ -33,6 +33,10 @@ body {
 }
 
 /* utilities */
+
+.banner {
+    height: 52px;
+}
 
 /* overall canvas */
 
@@ -132,6 +136,9 @@ body {
 }
 
 .chevron {
+    width: 100%;
+}
+.chevron svg {
     width: 24px;
     height: 24px;
     animation-iteration-count: infinite;
@@ -214,28 +221,83 @@ body {
 /* showcase lower badges part */
 
 #model3 .hero-content-end {
+    width: 100%;
     position: absolute;
     bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
     padding-bottom: 8px;
 }
 
-#model3 .disclamer {
+#model3 .disclaimer {
     min-height: 18px;
-    margin-top: 32px;
+    margin-top: 8px;
 }
 
 /* height 2 * 28 px */
 /* 160 / 24px gap / 160 / 24px gap / 160 / 24px gap /  212 */
 
-#model3 .hero-content-end .badges .speedometer {
-    width: 40px;
-    height: 20px;
+/* badges utils */
+
+#model3 .hero-content-end .badge {
     position: relative;
 }
 
-#model3 .hero-content-end .badges .speedometer .inner-circle {
+#model3 .hero-content-end .badges .digits {
+    display: inline-block;
+    font-size: 28px;
+    letter-spacing: -0.5px;
+    line-height: 28px;
+    font-weight: 500;
+}
+
+#model3 .hero-content-end .badges .digits .int {
+    transition: transform 1.733s cubic-bezier(1, 0, 0, 1) 0.2s;
+}
+
+#model3 .hero-content-end .badges .digits .dec {
+    padding: 0;
+    /* empty */
+}
+
+#model3 .hero-content-end .badges .digits .s {
+    font-size: 24px;
+    letter-spacing: -0.6px;
+    line-height: 24px;
+}
+
+#model3 .hero-content-end .badges > section {
+    display: inline-block;
+    margin: 0 14px;
+}
+
+#model3 .hero-content-end .badges p {
+    font-size: 12px;
+    line-height: 18px;
+    padding: 8px 0 0 0;
+}
+
+/* solo badges */
+
+#model3 .hero-content-end .badge1,
+#model3 .hero-content-end .badge2,
+#model3 .hero-content-end .badge3 {
+    min-width: 150px;
+}
+
+#model3 .hero-content-end .badge4 {
+    width: 204px;
+}
+
+#model3 .hero-content-end .badge1 .badge-speedometer {
+    margin-right: 4px;
+}
+#model3 .hero-content-end .badge1 .speedometer {
+    width: 40px;
+    height: 20px;
+    position: relative;
+    display: inline-block;
+}
+
+#model3 .hero-content-end .badge1 .speedometer .inner-circle {
     height: 15px;
     width: 30px;
     position: absolute;
@@ -243,14 +305,85 @@ body {
     inset-inline-start: 5px;
     opacity: 0.2;
 }
-#model3 .hero-content-end .badges .speedometer .needle {
+#model3 .hero-content-end .badge1 .speedometer .needle {
     width: 4px;
+    height: 16px;
     position: absolute;
-    /* left: calc(50% - 2px); */
+    left: calc(50% - 2px);
     bottom: 0;
     z-index: 2;
     inset-inline-start: calc(50% - 2px);
     transform-origin: center bottom;
     transform: translateZ(0) rotate(90deg);
     transition: transform 1.733s cubic-bezier(0.77, 0, 0.175, 1) 0.2s;
+}
+
+#model3 .hero-content-end .badge4 .btn {
+    transform: translateY(-50%);
+    width: 204px;
+    height: 40px;
+    border: 3px solid #fff;
+    border-radius: 4px;
+    align-items: center;
+    background: transparent;
+    display: inline-block;
+}
+#model3 .hero-content-end .badge4 a {
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 30px;
+    transition: color 0.33s ease, background-color 0.33s ease;
+}
+#model3 .hero-content-end .badge4 a:hover {
+    color: #000;
+    background-color: #fff;
+    transition: color 0.33s ease, background-color 0.33s ease;
+}
+
+.floating-chat {
+    border-radius: 50%;
+    background: #fff;
+    height: 52px;
+    width: 52px;
+    position: fixed;
+    border-radius: 50%;
+    bottom: 80px;
+    right: 32px;
+}
+.floating-chat .svg-wrapper {
+    position: absolute;
+    transform: translate(50%, +50%);
+}
+.floating-chat svg {
+    width: 24px;
+    height: 24px;
+    transform: scale(1.1);
+}
+
+/* showcase safety */
+
+#safety {
+    color: #171a20;
+}
+#safety .gallery {
+    position: relative;
+    z-index: -1;
+    height: 100vh;
+    width: 100vw;
+}
+#safety .gallery img {
+    display: block;
+    width: 70vw;
+    position: absolute;
+    top: 20%;
+    /* transform: translate(0%, 25%); */
+}
+
+#safety .safety-info {
+    position: absolute;
+    right: 0;
+    top: 0;
+    transform: translate(-50%, 0);
+    height: 100vh;
 }
